# WSocket

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp
include/: ASIO_KeepAliveManager.hpp  ASIO_WSocket.hpp  Error.h  Frame.hpp  SlidingBuffer.hpp  WSocketContext.hpp
include/compress/: Compress.hpp  CompressManager.hpp  Zstd.hpp
